[package]
name = "pult"
version = "0.2.1"
edition = "2024"
description = "pult — manifest-driven launcher for your repo's operational commands"
license = "MIT"
repository = "https://github.com/lonic-software/pult"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["string"] }
dirs = "6"
indexmap = { version = "2", features = ["serde"] }
inquire = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
# Test-only: derives the JSON Schema from the manifest structs so the
# committed pult.schema.json can't drift. Not in the shipped binary — the
# schema is compiled in via include_str! (see `pult self schema`).
schemars = { version = "0.8", features = ["indexmap2"] }
